<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_map">Map Location</string>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="hello_world">Hello world!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>
<!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>

<!-- Label for the units preference [CHAR LIMIT=30] -->
    <string name="pref_units_label">Temperature Units</string>

<!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_location_key" translatable="false">location</string>

<!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
    <string name="pref_location_default" translatable="false">6021,nz</string>

    <!-- Key name for storing unites in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_units_key" translatable="false">units</string>

    <!-- Key name for storing default units in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_units_default" translatable="false">metric</string>

    <!-- Key name for storing default units in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_units_metric" translatable="false">metric</string>

    <!-- Key name for storing default units in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_units_imperial" translatable="false">imperial</string>


</resources>
