<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Sunshine Settings">

        <EditTextPreference
            android:title="@string/pref_location_label"
            android:key="@string/pref_location_key"
            android:defaultValue="@string/pref_location_default"
            android:inputType="text"
            android:singleLine="true" />

        <ListPreference
            android:defaultValue="metric"
            android:dialogTitle="My Preferred Units"
            android:entries="@array/entries_units_list_preferences"
            android:entryValues="@array/entryvalues_units_list_preferences"
            android:key="@string/pref_units_key"
            android:title="@string/pref_units_label" />



    </PreferenceCategory>

</PreferenceScreen>